packaging/debian: bump to 1.0.3 version
This patch bumps the nx-v4l2 version to 1.0.3.

Change-Id: I71abdc42789543f20f1936fb90a00654443d1015
Signed-off-by: Chanho Park <chanho61.park@samsung.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nx-v4l2 (1.0.3) unstable; urgency=medium
+
+  * modify function return type
+
+ -- Chanho Park <chanho61.park@samsung.com>  Wed, 13 Sep 2017 13:13:28 +0900
+
 nx-v4l2 (1.0.1) unstable; urgency=medium
 
   * Initial release
